src/components/Project.module.css
.heading {
  text-transform: uppercase;
  margin: 3px 0 3px 10px;
  font-size: 18px;
}

.title {
  display: flex;
  background-color: black;
  margin: 0;
  color: white;
}

.subheading {
  text-transform: uppercase;
  font-size: 12px;
  color: black;
  margin: 12px 0;
}

.wrapper {
  margin: 15px 0;
  border: 1px solid black;
}

.mainContainer {
  display: flex;
}

.flip {
  flex-direction: row-reverse;
}

.projectDescription {
  flex: 20%;
  margin: 5px 2.5px;
  display: flex;
  flex-direction: column;
}

.projectContainer, .previewContainer {
  height: 100%;
  display: flex;
  flex-direction: column;
  flex: 100%;
  box-sizing: border-box;
  padding: 7px;
}

.previewContainer {
  flex: 80%;
  justify-content: flex-end;
}

.previewContainer>img {
  display: block;
  width: 100%;
  height: 100%;
  border: 1px solid black;
  /* min-height: 195px;
  min-width: 320px; */
  /* height: 200px;
  width: 380px; */
  margin: 2px 0;
}

.media {
  margin-top: auto;
  display: flex;
  align-items: flex-end;
}

.mediaLink {
  border: 1px solid black;
  width: 80px;
  height: 30px;
  text-transform: uppercase;
  font-size: 12px;
  color: black;
  margin-right: 4px;
  font-weight: bold;
  text-decoration: none;
  box-sizing: border-box;
}

.mediaLink>svg {
  width: 18px;
  height: auto;
  fill: black;
}

.mediaLink>span {
  font-size: 18px;
  color: transparent;
  text-shadow: 0 0 0 black;
}

.mediaLink:hover>svg, .mediaLink:focus>svg {
  fill: white;
}

.mediaLink:hover>span, .mediaLink:focus>span {
  text-shadow: 0 0 0 white;
}

.techWrapper {
  max-width: max-content;
  margin-left: auto;
}

.tech {
  display: flex;
  margin-top: 10px;
  margin-left: auto;
  max-width: 43px;
  overflow: hidden;
  background-color: #cbe;
}

.techButton {
  text-transform: uppercase;
  font-size: 12px;
  color: black;
}

.tech:hover {
  background-color: #ebd;
}

.showIcons {
  max-width: 100%;
  animation: grow 0.8s forwards;
  transition: max-width 0.8s linear;
}

.hideIcons {
  max-width: 43px;
  animation: shrink 0.8s forwards;
  transition: max-width 0.8s linear;
}

@keyframes grow {
  from {
    width: 43px;
  }
  to {
    width: 100%;
  }
}

@keyframes shrink {
  from {
    width: 100%;
  }
  to {
    width: 43px;
  }
}

.techButton {
  box-sizing: border-box;
  padding: 4px 4px 0 4px;
  border: 1px solid black;
  background-color: transparent;
  height: 30px;
  width: 43px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
}

.iconGroup {
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  padding: 2px 4px 2px 0px;
  height: 30px;
  background-color: black;
}

svg {
  fill: white;
  margin: 0 2px;
}

.projectPreview {
  flex: 1;
  display: flex;
  flex-direction: column;
  margin: 5px 2.5px;
}

/* Shutter Out Vertical */

.shutterOutVertical {
  display: inline-block;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  background: #cbe;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.shutterOutVertical:before {
  content: "";
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: #b3d;
  -webkit-transform: scaleY(0);
  transform: scaleY(0);
  -webkit-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.shutterOutVertical:hover, .shutterOutVertical:focus, .shutterOutVertical:active {
  color: #fff;
}

.shutterOutVertical:hover:before, .shutterOutVertical:focus:before, .shutterOutVertical:active:before {
  -webkit-transform: scaleY(1);
  transform: scaleY(1);
}

@media screen and (min-width: 1400px) {
  .wrapper {
    margin: 15px 300px;
  }
}

@media screen and (max-width: 1400px) {
  .wrapper {
    margin: 15px 200px;
  }
}

@media screen and (max-width: 1200px) {
  .wrapper {
    margin: 15px 80px;
  }
}

@media screen and (max-width: 950px) {
  .wrapper {
    margin: 15px 0px;
  }
}

@media screen and (max-width: 780px) {
  .wrapper {
    margin: 15px 0;
  }
  .mainContainer {
    flex-direction: column-reverse;
  }
  .flip {
    flex-direction: column-reverse;
  }
  .projectPreview >h1 {
    display: none;
  }
  .previewContainer>img {
    max-height: 100%;
    max-width: 100%;
    height: auto;
    width: auto;
    margin-bottom: 0;
  }
}

@media screen and (max-width: 400px) {
  .wrapper {
    margin: 15px 0;
  }
  .previewContainer>img {
    min-height: 195px;
    min-width: 200px;
  }
}

